[gd_scene load_steps=5 format=3 uid="uid://bphm3wyo54ao7"]

[ext_resource type="Script" uid="uid://ckjwuclu4wdw8" path="res://content/spaceships/space_ship.gd" id="1_kesne"]
[ext_resource type="Texture2D" uid="uid://dbremmusely42" path="res://assets/art/ships/ship_0000.png" id="2_s7j5m"]
[ext_resource type="Texture2D" uid="uid://bbiriyofxsilw" path="res://assets/art/ships/ship_0001.png" id="3_b23hj"]
[ext_resource type="Script" uid="uid://ie3tbml6fghh" path="res://content/component/sine_component.gd" id="3_hfwed"]

[node name="SpaceShip" type="Node2D"]
script = ExtResource("1_kesne")
ally_texture = ExtResource("2_s7j5m")
hostile_texture = ExtResource("3_b23hj")

[node name="ShipTexture" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
rotation = 1.5707964
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_b23hj")

[node name="SineComponent" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("3_hfwed")
target = NodePath("../ShipTexture")
frequency = 1.5
amplitude = 10.0
